--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- FOOTER SECTION -->
     <footer class="footer" id="footer">
         <p>My Learning Journal</p>
-        <p id="copyright">Copyright &#169; 2022</p>
+        <p id="copyright">Copyright &#169; 2022 | Build by <a href="https://ananfito.dev" target="_blank">Anthony Nanfito</a></p>
     </footer>
     <script src="index.js" type="module"></script>
 </body>
